[tool.poetry]
name = "cdk"
version = "0.1.0"
description = ""
authors = ["RJ Burnham <rj@consig.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "2.144.0"
constructs = ">=10.0.0,<11.0.0"
cdk-ecr-deployment = "^3.0.64"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
